Update to FIPA Standard for the new default value of SearchConstraints.maxResults